# 4thand5-cli

./: CMakeLists.txt  Dockerfile  README.md
config/: 4thand5
scripts/: 4thand5.sh
src/: 4thand5.m.cpp  CMakeLists.txt
src/feed/: CMakeLists.txt  feed.cpp  feed.h
src/feeds/: CMakeLists.txt  feed.cpp  feed.h
src/game/: CMakeLists.txt  game_state.cpp  game_state.h
src/game_data/: CMakeLists.txt  game_data.cpp  game_data.h
src/util/: util.cpp  util.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  feed.t.cpp
tests/unit/: CMakeLists.txt  util.t.cpp
